--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?vrdft#1" target="_blank">首页</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/1?jicqo" target="_blank">动态网</a> | <a href="https://d3ohms0ydcz20j.cloudfront.net/2?yahqjwn" target="_blank">大纪元</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/4?rwgnqetiy" target="_blank">看中国</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/pHh5q?evubarbxa" target="_blank">新生网</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/tktpt?agxucy" target="_blank">阿波罗网</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/Mjpvu?tbstbgq" target="_blank">干净世界</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/10?dzlefx" target="_blank">退党服务</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/Rffqf?xsfistrg" target="_blank">明慧广播</a> | <a href="https://d2oemtubh889hy.cloudfront.net/nw9Vn?xvhruc" target="_blank">传奇时代</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/AF9AG?dzjgor" target="_blank">新境界影视</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/zqMQA?trwqht" target="_blank">文昭谈论</a> | <a href="https://djwddd4nnr0na.cloudfront.net/7?xblabtgff" target="_blank">明慧</a></p><p><a href="https://duxu97yt14q37.cloudfront.net/9?yikqcyeq" target="_blank">大法</a> | <a href="https://duxu97yt14q37.cloudfront.net/3?alvssusyy" target="_blank">新唐人</a> | <a href="https://djwddd4nnr0na.cloudfront.net/obAhT?lccpppi" target="_blank">人民报</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/xXNHu?hpxaoi" target="_blank">放光明</a> | <a href="https://d282b678eon3c.cloudfront.net/5?dlsjvs" target="_blank">新纪元</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/6?xmpujz" target="_blank">希望之声</a> | <a href="https://d282b678eon3c.cloudfront.net/11?nkqzduts" target="_blank">无界网络</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/Pueji?rwukxd" target="_blank">追查国际</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/16?gutbk" target="_blank">明慧之窗</a> | <a href="https://d37g5boc7rm625.cloudfront.net/LdvzZ?qfjcpleak" target="_blank">细语人生</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/fBn3r?ihddfw" target="_blank">新世纪影视</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/PUWMb?tqlmrh" target="_blank">江峰时刻</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/8?itfipd" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278669.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2022/12/id13882012-fffebd1a602be85bdadac57d6e50abcc-320x200.jpeg"><p align="center">NASA砸巨资 委托SpaceX协助“销毁”太空站</p></a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?rjutbsund#1" target="_blank">首页</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/1?pfysrnj" target="_blank">动态网</a> | <a href="https://d2cj9ah31kn8fl.cloudfront.net/2?lbgrn" target="_blank">大纪元</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/4?ywnvs" target="_blank">看中国</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/pHh5q?nhqmq" target="_blank">新生网</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/tktpt?rgddeyn" target="_blank">阿波罗网</a> | <a href="https://d3ohms0ydcz20j.cloudfront.net/Mjpvu?staxpy" target="_blank">干净世界</a> | <a href="https://d3myewunzonann.cloudfront.net/10?lczpxrqt" target="_blank">退党服务</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/Rffqf?xkqvaycfb" target="_blank">明慧广播</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/nw9Vn?mczjhhf" target="_blank">传奇时代</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/AF9AG?fihnui" target="_blank">新境界影视</a> | <a href="https://d1ucfc2ix2o07u.cloudfront.net/zqMQA?hlcyfh" target="_blank">文昭谈论</a> | <a href="https://dgk92ykceobaf.cloudfront.net/7?cndhbvjfn" target="_blank">明慧</a></p><p><a href="https://d1cayv19uhqaei.cloudfront.net/9?daorhwp" target="_blank">大法</a> | <a href="https://dld25pfif4r64.cloudfront.net/3?metmof" target="_blank">新唐人</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/obAhT?yojnvf" target="_blank">人民报</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/xXNHu?pifwmxvsm" target="_blank">放光明</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/5?gixxrz" target="_blank">新纪元</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/6?ykwozhsx" target="_blank">希望之声</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/11?jhzueffn" target="_blank">无界网络</a> | <a href="https://d3siwajeg0khti.cloudfront.net/Pueji?zgkccis" target="_blank">追查国际</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/16?euggc" target="_blank">明慧之窗</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/LdvzZ?wbhob" target="_blank">细语人生</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/fBn3r?ivnhdvq" target="_blank">新世纪影视</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/PUWMb?fltvhtky" target="_blank">江峰时刻</a> | <a href="https://db1uzmukbk5lb.cloudfront.net/8?qsnoubph" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278768.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278769-GettyImages-1164452022-320x200.jpg"><p align="center">人民币遭遇多重贬值压力 今年已下跌逾2%</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278768.md#1" title="人民币遭遇多重贬值压力 今年已下跌逾2%""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278769-GettyImages-1164452022-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278669.md#1" title="NASA砸巨资 委托SpaceX协助“销毁”太空站""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/12/id13882012-fffebd1a602be85bdadac57d6e50abcc-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278609.md#1" title="中共三中全会确定会期 专家：释恐惧垮台信号""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/07/id14038136-GettyImages-1541243026-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278014.md#1" title="【时事军事】精确导弹在太平洋击中移动舰艇""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278195-ac8f80981d2177bfa1aca4331698fb79-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278422.md#1" title="美宗教自由报告揭露中共攻击神韵""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/07/id13776197-159201-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278024.md#1" title="中国经济低迷 物流仓库和工业园区大量空置""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/01/id14156127-GettyImages-71688027-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278183.md#1" title="中国汽车供应链加快出海 分析：规避欧美制裁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278185-GettyImages-2147871373-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278019.md#1" title="【菁英论坛】水库之殇 中国人头顶“核弹”？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278097-1e8561ab11ea244b14321729-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278790.md#1">拜登与川普首场辩论 您需要关注哪些方面？</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278744.md#1">北京重抛李尚福魏凤和案 专家：内乱的开始</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278108.md#1">【远见快评】美重磅法案 制裁中共3大招威力大</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278768.md#1">人民币遭遇多重贬值压力 今年已下跌逾2%</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278790.md#1">拜登与川普首场辩论 您需要关注哪些方面？</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278744.md#1">北京重抛李尚福魏凤和案 专家：内乱的开始</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278669.md#1">NASA砸巨资 委托SpaceX协助“销毁”太空站</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278675.md#1">北大清华毕业生约八成读研 分析：因失业率高</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277203.md#1">【直播预告】美国总统大选首场辩论周四登场</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278609.md#1">中共三中全会确定会期 专家：释恐惧垮台信号</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277262.md#1">华为旗下车企罕见跌停 市值一天蒸发144亿</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277535.md#1">“高考达人”梁实再落榜 称“心情烂透了”</a><br>
@@ -50,6 +50,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278455.md#1">大陆消费不振实体店倒闭 民众的钱去哪儿了</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278580.md#1">上海知名橱柜公司“全屋定制”门店人去楼空</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277635.md#1">《蚕食美国》制片人：共产主义者是什么？（上）</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278108.md#1">【远见快评】美重磅法案 制裁中共3大招威力大</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278019.md#1">【菁英论坛】水库之殇 中国人头顶“核弹”？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278023.md#1">章子怡疑不满新片戏份被剪？受访片段引揣测</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277984.md#1">【新闻看点】2日本人苏州遇刺 又是“偶发”？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277862.md#1">【时事金扫描】摧毁上百无人机 乌导弹威胁莫斯科</a><br>
@@ -96,15 +98,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275407.md#1">中共宣传前后矛盾 重启熊猫外交遭民间反对</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275290.md#1">广东洪灾损失惨重 江西多座水库开闸泄洪</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275201.md#1">中共抛司法22条针对台湾 分析：虚声恐吓</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275099.md#1">【菁英论坛】南海冲突升温 普京要来插手？</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274928.md#1">【新闻大家谈】亲历六四 李英之艰难抗共35年</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d4r78tyofwyp0.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d4r78tyofwyp0.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 45,572</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d35tpwmyrtmb5e.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d35tpwmyrtmb5e.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,031</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 432,385,703 人
+!共 432,388,684 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278372.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278378-Unknown3-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278372.md#1">重庆妇女控诉 医疗事故导致其家破人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278214.md#1">蒙古国知名歌手演出被中共取消</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278153.md#1">作高智晟壁画偿夙愿 逃美教师找到人生新起点</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277784.md#1">中国民主党两主席陷囹圄 海外党员吁中共释放</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277221.md#1">新报告揭器官移植产业背后中共活摘暴行</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276320.md#1">重庆著名书法家陈清彬遭中共绑架</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278505.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14145626-656162-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278505.md#1">消息：中国国企设年薪上限 要求员工退薪</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278217.md#1">关税致生产转移 沃尔沃电动车推迟对美交付</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278158.md#1">胡锡进炒股一年亏逾7万 引热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278073.md#1">北京下调购房首付刺激楼市 民众不看好</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278037.md#1">因经济担忧 大陆国债收益率降至22年来最低</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277953.md#1">欧盟对华电动车关税如何发展 美欧做法有不同</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278744.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/09/id14080656-000_33AN6QZ-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278744.md#1">北京重抛李尚福魏凤和案 专家：内乱的开始</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278595.md#1">上海前人大主任受审 曾被指帮情妇获政协委员资格</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278503.md#1">中共党媒高官称记者写稿要当奏折写 引热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278604.md#1">台陆委会提高陆港澳旅游警示 建议避免前往</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278435.md#1">国台办称欢迎再来 台网红：想请我吃鸿门宴</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278075.md#1">限韩令解封又收紧 韩乐队在华演出突遭取消</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278534.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276271-6190399658d0aa81774f0f6c042a418d-e1719478794476-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278534.md#1">6省34条河流现超警洪水 湘江洪峰过境长沙</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278369.md#1">长春房屋坍塌酿5伤1失踪 民拍视频被威胁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277700.md#1">浙江水亭门古城墙北段坍塌 现场画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277679.md#1">云南丽江17分钟连发3次地震 最高4.5级</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277265.md#1">内蒙古一家五口灭门案 网曝嫌犯被逼急杀人</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276882.md#1">中国35条河流发超警洪水 上海将迎最强暴雨</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277952.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14277966-GettyImages-1630323658-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277952.md#1">苏州袭击事件后 旅居上海的日本人提高警觉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277745.md#1">接连2起外国人遇袭案 中共被指放任仇外情绪</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277493.md#1">三退声明精选（2024/06/25）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276852.md#1">办银行卡需要派出所同意 长春储户不满</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276784.md#1">中国农村中小银行洗牌 7天40家合并或解散</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276725.md#1">日本妈妈和孩子在苏州遇袭 日驻华使馆回应</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278675.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14140947-GettyImages-52003481-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278675.md#1">北大清华毕业生约八成读研 分析：因失业率高</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1">中国学术界频造假 学者：像病毒在污染世界</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266062.md#1">高考首日 新课标作文题被吐槽 海南未发条形码</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265798.md#1">中国高考首用AI监控 被疑技术不完善恐有误判</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265024.md#1">揭秘：中共利用加国大学培养军事科学家</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263339.md#1">《64三十五年祭》作曲者：不曾褪色的使命</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216942.md#1">【独家】和两任总理闹矛盾 习经济会突离场</a><br>
